base version 1.0: LCD added

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -2,5 +2,8 @@ CC=arm-linux-gnueabihf-gcc
 
 all:
 	${CC} -c gateway_lib.c -o gateway_lib.o 
+	${CC} -c km_lcd.c -o km_lcd.o 
 clean:
 	rm gateway_lib.o
+	rm km_lcd.o
+	rm libkmlcd.a libgateway.a
