--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,8 +1,8 @@
 CC=arm-linux-gnueabihf-gcc
 
 all:
-	${CC} -c gateway_lib.c -o gateway_lib.o 
-	${CC} -c km_lcd.c -o km_lcd.o 
+	${CC} -c gateway_lib.c -fPIC -o gateway_lib.o 
+	${CC} -c km_lcd.c -fPIC -o km_lcd.o 
 clean:
 	rm gateway_lib.o
 	rm km_lcd.o
