node offline code added

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -4,6 +4,7 @@ all:
 	${CC} -c gateway_lib.c -fPIC -o gateway_lib.o 
 	${CC} -c km_lcd.c -fPIC -o km_lcd.o 
 clean:
-	rm gateway_lib.o
+	rm libkmlcd.so libgateway.so
 	rm km_lcd.o
-	rm libkmlcd.a libgateway.a
+	rm gateway_lib.o
+
