--- a/config
+++ b/config
@@ -1,7 +1,29 @@
+
+
+
+
+#RS485 Configuration (default 115200 n81)
+RS485_UART=/dev/ttyO4
+
+#Zigbee Configuration (default 115200 n81)
+ZIGBEE_UART=/dev/ttyO2
+
+#IoT Configutration
+IoT_NONODES=2
+#IoT Protocol Configuraion
+IoT_RS485=1
+IoT_ZIGBEE=1
+IoT_POLLTIME=3
+
 #Local host - Without Network with in system
+#MQTT
 MQTT_HOST=localhost
 MQTT_PORT=1883
 MQTT_TOPIC=/weather
+
+#Nodes Configuration
+NO_OF_NODES=2
+
 
 #Local network - LAN
 #MQTT_HOST=192.168.1.21
@@ -13,4 +35,5 @@ MQTT_TOPIC=/weather
 #MQTT_PORT=8883
 #MQTT_TOPIC=/topic
 #MQTT_USERNAME=
+
 #MQTT_PASSWD=
