--- a/config
+++ b/config
@@ -8,9 +8,9 @@ RS485_UART=/dev/ttyO4
 #Zigbee Configuration (default 115200 n81)
 ZIGBEE_UART=/dev/ttyO2
 
-#IoT Configutration
-IoT_NONODES=2
-#IoT Protocol Configuraion
+#IoT Configuration
+IoT_NO_OF_NODES=2
+#IoT Protocol Configuration
 IoT_RS485=1
 IoT_ZIGBEE=1
 IoT_POLLTIME=3
@@ -20,9 +20,6 @@ IoT_POLLTIME=3
 MQTT_HOST=localhost
 MQTT_PORT=1883
 MQTT_TOPIC=/weather
-
-#Nodes Configuration
-NO_OF_NODES=2
 
 
 #Local network - LAN
