--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,8 @@
 CC=arm-linux-gnueabihf-gcc
 
 all:
-	${CC} -fPIC -c main.c  	
+	${CC} -fPIC -c main.c  
+	gcc -c subscriber.c -I /usr/include/mysql/
 clean:
 	rm main.o
+	rm subscriber.o
